# fake-audio-detection

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: sync_hf_space.yaml
api/: index.html
customization/: index.html
demo/: Dockerfile  app.py  normalization.py  reboot_hf_space.py  requirements.txt  run.sh
docs/: customization.md  getting-started.md  index.md  results.md  step-by-step-guide.md
getting-started/: index.html
results/: index.html
search/: search_index.json
src/blueprint/: extract_features.py  normalization.py
src/fake_audio_detection/: model.py
step-by-step-guide/: index.html
